--- a/src/emails/mail_2/styles/main.scss
+++ b/src/emails/mail_2/styles/main.scss
@@ -5,8 +5,8 @@
 /*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 
 html {
-    color: red;
-    font-size: 1em;
+    color: #111;
+    font-size: 2em;
     line-height: 1.4;
 }
 
