--- a/src/shared/templates/layouts/base.hbs
+++ b/src/shared/templates/layouts/base.hbs
@@ -1,33 +1,49 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>test</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="stylesheet" href="styles/main.css">
+<html xmlns="http://www.w3.org/1999/xhtml"
+xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office">
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>{{ subject }}</title>
+{{#if webfont}}
+<!--[if !mso]><!-- -->
+<link rel="stylesheet" href="styles/{{ webfont }}.css" data-embed>
+<!--<![endif]-->
+{{/if}}
+<link href="styles/main.css" media="all" rel="stylesheet" type="text/css" />
+<!--[if gte mso 9]><xml>
+<o:OfficeDocumentSettings>
+<o:AllowPNG/>
+<o:PixelsPerInch>96</o:PixelsPerInch>
+</o:OfficeDocumentSettings>
+</xml>
+<![endif]-->
+<!--[if gte mso 12]>
+<style>
+ul {
+  display: block;
+	margin: 0 0 0 24px;
+	padding: 0;
+	list-style-position: inside;
+}
+</style>
+<![endif]-->
+</head>
 
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        {{partial "header" }}
+<body>
 
-        <div class="main-container">
-            <div class="main wrapper clearfix">
-      
-            {% body %}
-            
-            </div>
-        </div>
-      
-        {{partial "footer" }}
-    </body>
+<table class="body">
+	<tr>
+		<td class="outer"></td>
+		<td class="container">
+			[mso_open]<table class="inner-container"><tr><td>[mso_close]
+			<div class="content">{% body %}</div>
+	    [mso_open]</td></tr></table>[mso_close]
+		</td>
+		<td class="outer"></td>
+	</tr>
+</table>
+
+</body>
 </html>
-
