--- a/src/emails/default/templates/email/default.hbs
+++ b/src/emails/default/templates/email/default.hbs
@@ -14,11 +14,11 @@ subject: Default Example Email
   <table>
     <tr>
       <td class="content-block column-single">
-        <h1 class="webfont">HTML Ipsum Presents</h1>
+        <h1 class="webfont">HTML Ipsum Presentssssss {{content.content}}</h1>
 
         <p class="br">&nbsp;</p>
 
-        <p><strong>This is really quite clever!!!!</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo.</p>
+        <p><strong>This is really quite clever!!!!!</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo.</p>
 
         <p class="br">&nbsp;</p>
 
