--- a/src/emails/default/templates/email/default.hbs
+++ b/src/emails/default/templates/email/default.hbs
@@ -14,11 +14,11 @@ subject: Default Example Email
   <table>
     <tr>
       <td class="content-block column-single">
-        <h1 class="webfont">HTML Ipsum Presentssssss {{content.content}}</h1>
+        <h1 class="webfont">HTML Ipsum Presents {{content.content}}</h1>
 
         <p class="br">&nbsp;</p>
 
-        <p><strong>This is really quite clever!!!!!</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo.</p>
+        <p><strong>This is quite clever!</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo.</p>
 
         <p class="br">&nbsp;</p>
 
@@ -58,35 +58,22 @@ subject: Default Example Email
   </table>
   <table id="columns">
     <tr>
-      <td class="wrapper content-block">
-        <table>
-          <tr>
-            <td class="column-one column">
+      {{#> columns class="content-block"}}
+        <tr>
+          {{#> column name="left" width="300px" class="p0"}}
               <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo.</p>
 
               <p class="br">&nbsp;</p>
 
               <p>Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
-            </td>
+          {{/column}}
+          {{#> column name="right" width="300px" class="p0"}}
+              <p class="br">&nbsp;</p>
 
-            <td class="column-two column">
-              <table>
-                <tr>
-                  <td class="align-center"><a href="#"><img src="http://placehold.it/156x100/994453?text=button+text" alt="altText" class="imageFix"></a></td>
-                </tr>
-
-                <tr>
-                  <td>
-                    <p class="br">&nbsp;</p>
-
-                    <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-        </table>
-      </td>
+              <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
+          {{/column}}
+        </tr>
+      {{/columns}}
     </tr>
   </table>
 
