--- a/src/emails/default/templates/email/default.hbs
+++ b/src/emails/default/templates/email/default.hbs
@@ -18,7 +18,7 @@ subject: Default Example Email
 
         <p class="br">&nbsp;</p>
 
-        <p><strong>This is quite clever!</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo.</p>
+        <p><strong>This is quite clever!!</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo.</p>
 
         <p class="br">&nbsp;</p>
 
