Added new loading graphic

--- a/preview/styles/scss/_ui.scss
+++ b/preview/styles/scss/_ui.scss
@@ -2,12 +2,12 @@
   
   // Basic elements
   body {
-    background: #fff;
-    color: #333;
+    background: #222;
+  	color: #ccc;
     font: normal 14px/1.4 Helvetica, Arial, Sans-serif;
   }
   a {
-    color: #000;
+    color: #fff;
     text-decoration: none;
 
     &:hover {
