Added preview styling. Re-named. Bumped version number.

--- a/preview/styles/scss/_ui.scss
+++ b/preview/styles/scss/_ui.scss
@@ -4,7 +4,7 @@
   body {
     background: #222;
   	color: #ccc;
-    font: normal 14px/1.4 Helvetica, Arial, Sans-serif;
+    font: normal 14px/1.4 'Open Sans', Helvetica, Arial, Sans-serif;
   }
   a {
     color: #fff;
