--- a/preview/styles/scss/preview.scss
+++ b/preview/styles/scss/preview.scss
@@ -1,3 +1,6 @@
+// Font Import
+@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400';
+
 // Some vars here are fine.
 $drawer-animation-duration:     0.3s;
 
