--- a/preview/styles/scss/_ui.scss
+++ b/preview/styles/scss/_ui.scss
@@ -45,6 +45,11 @@
   .select2-container {
     text-align: left;
     color: #333;
+    font-weight: 300;
+
+    strong {
+      font-weight: 400;
+    }
   }
 
   // Preview Screens
