--- a/src/emails/assemble_demo/styles/main.scss
+++ b/src/emails/assemble_demo/styles/main.scss
@@ -7,6 +7,7 @@
 $padding: 0;
 $resPadding: 0;
 $width: 600px;
+$colour-background: #000000;
 
 // Imports
 // ----------------------------------
@@ -27,24 +28,44 @@ $width: 600px;
   background: #ffffff;
   padding-top: $columnPadding;
   padding-bottom: $columnPadding;
-
-}
-
-.column-one {
-  width: 400px;
-  border-right: 1px solid $body-font-color;
-}
-
-.column-two {
-  width: 200px
 }
 
 // Webfont Styles
 @media screen {
 	.webfont {
-		font-family: 'Raleway', Helvetica, Arial, sans-serif !important;
-		font-weight: 600!important;
+		font-family: 'Open Sans', Helvetica, Arial, sans-serif !important;
+		font-weight: 300!important;
 	}
+
+	h1.webfont {
+  	font-weight: 600!important;
+	}
+}
+
+// Sections
+
+/// Hero
+#hero {
+
+  .title__outer {
+    background: #ffffff;
+  }
+
+  .title__inner {
+    padding: 30px 0;
+  }
+}
+
+#content {
+  padding: 10px;
+
+  .content__outer {
+    background: #ffffff;
+  }
+
+  .content__inner {
+    padding: 30px;
+  }
 }
 
 // Responsive
@@ -69,27 +90,9 @@ table[class=body]{
       }
     }
 
-    .column {
-      padding: 0 5px!important;
-
-      &-single {
-        padding: 0 10px!important;
-      }
-    }
-
-    .content-block {
-      padding-top: 30px !important;
-      padding-bottom: 30px !important;
-    }
-
-    .column-one {
-      padding-bottom: 15px !important;
-      border-right: none !important;
-      border-bottom: 1px solid $body-font-color !important;
-    }
-
-    .column-two {
-      padding-top: 15px !important;
+    // Hero
+    .bg-image {
+      background-position: center center!important
     }
   }
 }
