Initial commit for the big re-jig Moving to a mobile first approach.

--- a/src/shared/styles/_config.scss
+++ b/src/shared/styles/_config.scss
@@ -15,6 +15,8 @@ $colour-primary:            #348eda !default;	// Primary color for buttons and l
 $colour-font: 				      #111111 !default;	// Default font color
 $colour-background:         #f1efef !default; // Background color
 
+$colour-grey:               $colour-background;
+
 // Typography
 // -------
 $body-font-family:          "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif !default;
