--- a/src/shared/templates/partials/components/image-spacer.hbs
+++ b/src/shared/templates/partials/components/image-spacer.hbs
@@ -1,1 +1,1 @@
-<td class="spacer-image {{ class }}"><img width={{ width }} height="{{ height }}" src="https://s3-eu-west-1.amazonaws.com/tribeuk/images/dist/img/spacer.gif"></td>
+<td class="spacer-image {{ class }}"><img width={{ width }} height="{{ height }}" src="images/spacer.gif"></td>
