--- a/src/shared/templates/partials/components/spacer.hbs
+++ b/src/shared/templates/partials/components/spacer.hbs
@@ -1,1 +1,1 @@
-<td class="spacer {{ class }}" width={{ width }} height="{{ height }}" style="font-size:{{ height }}; line-height:{{ height }}">&nbsp;</td>
+<td class="spacer {{ class }}" {{#if width}}width={{ width }}{{/if}} height="{{ height }}" style="font-size:{{ height }}; line-height:{{ height }}">&nbsp;</td>
