--- a/src/shared/styles/_global.scss
+++ b/src/shared/styles/_global.scss
@@ -8,38 +8,12 @@ a {
   box-sizing: border-box;
 }
 
-img {
-	-ms-interpolation-mode: bicubic;
-	max-width: 100%;
-	border:0 none;
-	line-height:100%;
-	outline:none;
-	text-decoration:none;
-
-	&.heightFix {
-		height:auto;
-	}
-}
-
-a img{
-  border:0 none;
-}
-
-.imageFix{
-  display:block;
-}
-
 body {
-	font-family: $body-font-family;
 	-webkit-font-smoothing: antialiased;
-	font-size: $body-font-size;
-	height: 100% !important;
-	line-height: $body-line-height;
 	margin: 0;
 	padding: 0;
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
-	width: 100% !important;
 }
 
 center {
@@ -49,15 +23,30 @@ center {
 
 // Let's make sure all tables have defaults
 table {
-	border-collapse:collapse;
+	border-collapse: collapse;
+	width: 100%;
 	mso-table-lspace: 0pt;
 	mso-table-rspace: 0pt;
-	width: 100%;
+}
 
-	td {
-		border-collapse:collapse;
-		vertical-align: top;
+td {
+	border-collapse:collapse;
+	vertical-align: top;
+  padding: 0;
+}
+
+//Set Image rendering
+img {
+	-ms-interpolation-mode: bicubic;
+  display: block;
+
+	&.heightFix {
+		height:auto;
 	}
+}
+
+a img{
+  border:0 none;
 }
 
 // External class fix for Outlook.com
